--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h2>El Juego</h2>
             <p>Ratsel es un juego con bases en la simulación del ambiente de trabajo de un bartender nocturno presenta una narrativa profunda e intrigante a través de las conversaciones de los clientes a los que atiendes. </p>
             <div text-align = "center">
-                <img src="Imágenes/MALOTE.jpg" alt="Pequeño ejemplo" title="Ejemplo" width="405px" height="540px" />
+                <img src="Imágenes/MALOTE.JPG" alt="Pequeño ejemplo" title="Ejemplo" width="405px" height="540px" />
                 <img src="Imágenes/JOAQUIN.JPG" alt="Pequeño ejemplo" title="Ejemplo" width="405px" height="540px"/>
                 <img src="Imágenes/JOSEFA.JPG" alt="Pequeño ejemplo" title="Ejemplo" width="405px" height="540px"/>
             </div>
